VariableDeclarationOperationInterpreter_UnitTest