@@ -23,6 +23,8 @@
                         --add-opens javamm.interpreter/academy.devonline.javamm.interpreter.component.impl=ALL-UNNAMED
                         --add-opens
                         javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.operation=ALL-UNNAMED
+                        --add-opens
+                        javamm.interpreter/academy.devonline.javamm.interpreter.component.impl.operation.simple=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
